--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>Shool</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <!-- navbar -->
+        <nav class="navbar display-flex">
+            <div class="brand display-flex">
+                <img class="bag" src="assets/logo.png" alt="">
+                <img class="hamburger" src="assets/Vector (Stroke).png" alt="">
+                <h2 class="brand-name quicksand-font">SCHOOL</h2>
+            </div>
+            <div class="list-item display-flex quicksand-font">
+                <li class="home"><a class="nav-link" href=""><span id="home">Home</span></a></li>
+                <li><a class="nav-link" href=""><span id="about">About</span></a></li>
+                <li><a class="nav-link" href=""><span id="facilities">Facilities</span></a></li>
+                <li><a class="nav-link" href=""><span id="admission">Admission</span></a></li>
+            </div>
+            <div>
+                <button class="btn-one">Contact</button>
+            </div>
+        </nav>
+        <!-- banner section -->
+
+        <banner class="banner  display-flex">
+            <div class="banner-content quicksand-font">
+                <h1 class="banner-title"><span class="empowring">Empowering</span><br>
+                    students from small<br> age <span class="vision">towards vision</span></h1>
+                <p class="banner-descript">With the courage, Confidence, Creativity and Compassion to make<br> their Unique Contribution in a
+                    Diverse and Dynamic World.</p>
+                <button class="enroll-btn quicksand-font">Enroll Now</button>
+            </div>
+            <div>
+                <img class="banner-img" src="assets/hero-kids.png" alt="">
+            </div>
+        </banner>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
