--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <div class="banner-content quicksand-font">
                 <h1 class="banner-title"><span class="empowring">Empowering</span><br>
                     students from small<br> age <span class="vision">towards vision</span></h1>
-                <p class="banner-descript">With the courage, Confidence, Creativity and Compassion to make<br> their Unique Contribution in a
+                <p class="banner-descript">With the courage, Confidence, Creativity and Compassion to make<br> their
+                    Unique Contribution in a
                     Diverse and Dynamic World.</p>
                 <button class="enroll-btn quicksand-font">Enroll Now</button>
             </div>
@@ -52,7 +53,36 @@
     </header>
 
     <main>
-
+        <section class="curriculum">
+            <h1 class="curriculum-title quicksand-font">Standard Curriculum</h1>
+            <div class="card-container display-flex">
+                <div class="card-one">
+                    <img src="assets/kinder.png" alt="">
+                    <h3 class="card-title quicksand-font">Kinder (3-6) Years</h3>
+                    <p class="card-descript raleway-font">Cum sociis natoque penatibus et magnis<br>
+                        dis parturient montes, nascetur ridiculus<br>
+                        mu sdis parturient</p>
+                        <button class="card-btn-one quicksand-font">Read More</button>
+                </div>
+                <div class="card-two">
+                    <img src="assets/elementary.png" alt="">
+                    <h3 class="card-title quicksand-font">Elementary School</h3>
+                    <p class="card-descript raleway-font">Cum sociis natoque penatibus et magnis<br>
+                        dis parturient montes, nascetur ridiculus<br>
+                        mu sdis parturient</p>
+                        <button class="card-btn-two quicksand-font">Read More</button>
+                </div>
+                <div class="card-three">
+                    <img src="assets/middle.png" alt="">
+                    <h3 class="card-title quicksand-font">Middle (10-16) Years</h3>
+                    <p class="card-descript raleway-font">Cum sociis natoque penatibus et magnis<br>
+                        dis parturient montes, nascetur ridiculus<br>
+                        mu sdis parturient</p>
+                        <button class="card-btn-three quicksand-font">Read More</button>
+                </div>
+            </div>
+            
+        </section>
     </main>
 
     <footer>
