added responsive in the curriculum section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                         <button class="card-btn-three quicksand-font">Read More</button>
                 </div>
             </div>
-            
+            <button class="left-slide"><img src="assets/Symbol.png" alt=""></button>
+            <button class="right-slide"><img src="assets/Symbo-rightl.png" alt=""></button>
         </section>
     </main>
 
