--- a/index.html
+++ b/index.html
@@ -1,94 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Shool</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-
-<body>
-
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <header>
-        <!-- navbar -->
-        <nav class="navbar display-flex">
-            <div class="brand display-flex">
-                <img class="bag" src="assets/logo.png" alt="">
-                <img class="hamburger" src="assets/Vector (Stroke).png" alt="">
-                <h2 class="brand-name quicksand-font">SCHOOL</h2>
-            </div>
-            <div class="list-item display-flex quicksand-font">
-                <li class="home"><a class="nav-link" href=""><span id="home">Home</span></a></li>
-                <li><a class="nav-link" href=""><span id="about">About</span></a></li>
-                <li><a class="nav-link" href=""><span id="facilities">Facilities</span></a></li>
-                <li><a class="nav-link" href=""><span id="admission">Admission</span></a></li>
-            </div>
-            <div>
-                <button class="btn-one">Contact</button>
-            </div>
-        </nav>
-        <!-- banner section -->
-
-        <banner class="banner  display-flex">
-            <div class="banner-content quicksand-font">
-                <h1 class="banner-title"><span class="empowring">Empowering</span><br>
-                    students from small<br> age <span class="vision">towards vision</span></h1>
-                <p class="banner-descript">With the courage, Confidence, Creativity and Compassion to make<br> their
-                    Unique Contribution in a
-                    Diverse and Dynamic World.</p>
-                <button class="enroll-btn quicksand-font">Enroll Now</button>
-            </div>
-            <div>
-                <img class="banner-img" src="assets/hero-kids.png" alt="">
-            </div>
-        </banner>
+      <!-- navbar -->
+      <nav class="navbar display-flex">
+        <div class="brand display-flex">
+          <img class="bag" src="assets/logo.png" alt="" />
+          <img class="hamburger" src="assets/Vector (Stroke).png" alt="" />
+          <h2 class="brand-name quicksand-font">SCHOOL</h2>
+        </div>
+        <div class="list-item display-flex quicksand-font">
+          <li class="home">
+            <a class="nav-link" href=""><span id="home">Home</span></a>
+          </li>
+          <li>
+            <a class="nav-link" href=""><span id="about">About</span></a>
+          </li>
+          <li>
+            <a class="nav-link" href=""
+              ><span id="facilities">Facilities</span></a
+            >
+          </li>
+          <li>
+            <a class="nav-link" href=""
+              ><span id="admission">Admission</span></a
+            >
+          </li>
+        </div>
+        <div>
+          <button class="btn-one">Contact</button>
+        </div>
+      </nav>
+      <!-- banner section -->
+      <banner class="banner display-flex">
+        <div class="banner-content quicksand-font">
+          <h1 class="banner-title">
+            <span class="empowring">Empowering</span><br />
+            students from small<br />
+            age <span class="vision">towards vision</span>
+          </h1>
+          <p class="banner-descript">
+            With the courage, Confidence, Creativity and Compassion to make<br />
+            their Unique Contribution in a Diverse and Dynamic World.
+          </p>
+          <button class="enroll-btn quicksand-font">Enroll Now</button>
+        </div>
+        <div>
+          <img class="banner-img" src="assets/hero-kids.png" alt="" />
+        </div>
+      </banner>
     </header>
-
     <main>
-        <section class="curriculum">
-            <h1 class="curriculum-title quicksand-font">Standard Curriculum</h1>
-            <div class="card-container display-flex">
-                <div class="card-one">
-                    <img src="assets/kinder.png" alt="">
-                    <h3 class="card-title quicksand-font">Kinder (3-6) Years</h3>
-                    <p class="card-descript raleway-font">Cum sociis natoque penatibus et magnis<br>
-                        dis parturient montes, nascetur ridiculus<br>
-                        mu sdis parturient</p>
-                        <button class="card-btn-one quicksand-font">Read More</button>
-                </div>
-                <div class="card-two">
-                    <img src="assets/elementary.png" alt="">
-                    <h3 class="card-title quicksand-font">Elementary School</h3>
-                    <p class="card-descript raleway-font">Cum sociis natoque penatibus et magnis<br>
-                        dis parturient montes, nascetur ridiculus<br>
-                        mu sdis parturient</p>
-                        <button class="card-btn-two quicksand-font">Read More</button>
-                </div>
-                <div class="card-three">
-                    <img src="assets/middle.png" alt="">
-                    <h3 class="card-title quicksand-font">Middle (10-16) Years</h3>
-                    <p class="card-descript raleway-font">Cum sociis natoque penatibus et magnis<br>
-                        dis parturient montes, nascetur ridiculus<br>
-                        mu sdis parturient</p>
-                        <button class="card-btn-three quicksand-font">Read More</button>
-                </div>
+      <section class="curriculum">
+        <h1 class="curriculum-title quicksand-font">Standard Curriculum</h1>
+        <div class="card-container display-flex">
+          <div class="card-one">
+            <img src="assets/kinder.png" alt="" />
+            <h3 class="card-title quicksand-font">Kinder (3-6) Years</h3>
+            <p class="card-descript raleway-font">
+              Cum sociis natoque penatibus et magnis<br />
+              dis parturient montes, nascetur ridiculus<br />
+              mu sdis parturient
+            </p>
+            <button class="card-btn-one quicksand-font">Read More</button>
+          </div>
+          <div class="card-two">
+            <img src="assets/elementary.png" alt="" />
+            <h3 class="card-title quicksand-font">Elementary School</h3>
+            <p class="card-descript raleway-font">
+              Cum sociis natoque penatibus et magnis<br />
+              dis parturient montes, nascetur ridiculus<br />
+              mu sdis parturient
+            </p>
+            <button class="card-btn-two quicksand-font">Read More</button>
+          </div>
+          <div class="card-three">
+            <img src="assets/middle.png" alt="" />
+            <h3 class="card-title quicksand-font">Middle (10-16) Years</h3>
+            <p class="card-descript raleway-font">
+              Cum sociis natoque penatibus et magnis<br />
+              dis parturient montes, nascetur ridiculus<br />
+              mu sdis parturient
+            </p>
+            <button class="card-btn-three quicksand-font">Read More</button>
+          </div>
+        </div>
+        <button class="left-slide">
+          <img src="assets/Symbol.png" alt="" />
+        </button>
+        <button class="right-slide">
+          <img src="assets/Symbo-rightl.png" alt="" />
+        </button>
+      </section>
+      <!-- Our Stories section -->
+      <section class="our-stories">
+        <h1 class="stori-heading quicksand-font">Our Stories</h1>
+        <div class="flex-div display-flex">
+          <div class="stori-one">
+            <img class="stori-img" src="assets/story-1.png" alt="" /><span
+              class="stori-one-date raleway-font"
+              >November 19, 2019</span
+            >
+            <h2 class="stori-title quicksand-font">
+              A fun toddler coloring training on classroom
+            </h2>
+
+            <p class="stori-descript raleway-font">
+              Beautiful branding for changes by Never Now in Australia.<br />
+              changes is a platform for open discussion in an inclusive and<br />
+              collaborative environment, providing the...
+            </p>
+          </div>
+
+          <div class="stories-container display-grid">
+            <div class="stori-two radius">
+              <img class="stori-img" src="assets/story-2.png" alt="" />
+              <span class="stori-date raleway-font">November 19, 2019</span>
+              <h6 class="h-six quicksand-font">
+                Find out if a school fits the,<br />
+                family’s needs
+              </h6>
             </div>
-            <button class="left-slide"><img src="assets/Symbol.png" alt=""></button>
-            <button class="right-slide"><img src="assets/Symbo-rightl.png" alt=""></button>
-        </section>
+            <div class="stori-three radius">
+              <img class="stori-img" src="assets/story-3.png" alt="" /><span
+                class="stori-date raleway-font"
+                >November 19, 2019</span
+              >
+              <h6 class="h-six quicksand-font">
+                Summer math & literacy<br />
+                centres for kids
+              </h6>
+            </div>
+            <div class="stori-four">
+              <img class="stori-img" src="assets/story-4.png" alt="" /><span
+                class="stori-date raleway-font"
+                id="september"
+                >September 10, 2019</span
+              >
+              <h6 class="h-six quicksand-font">
+                Classroom management<br />
+                techniques for new tutors
+              </h6>
+            </div>
+            <div class="stori-five">
+              <img class="stori-img" src="assets/story-5.png" alt="" /><span
+                class="stori-date raleway-font"
+                id="july"
+                >July 19, 2019</span
+              >
+              <h6 class="h-six quicksand-font">
+                Conversation rhymes<br />
+                improve kids listening
+              </h6>
+            </div>
+          </div>
+        </div>
+        <button class="view-btn quicksand-font">View All</button>
+      </section>
     </main>
-
-    <footer>
-
-    </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
