--- a/index.html
+++ b/index.html
@@ -160,6 +160,28 @@
                 techniques for new tutors
               </h6>
             </div>
+            <div id="stori-four-one" class="stori-four">
+              <img class="stori-img" src="assets/story-4.png" alt="" /><span
+                class="stori-date raleway-font"
+                id="september"
+                >September 10, 2019</span
+              >
+              <h6 class="h-six quicksand-font">
+                Classroom management<br />
+                techniques for new tutors
+              </h6>
+            </div>
+            <div id="stori-four-two" class="stori-four">
+              <img class="stori-img" src="assets/story-4.png" alt="" /><span
+                class="stori-date raleway-font"
+                id="september"
+                >September 10, 2019</span
+              >
+              <h6 class="h-six quicksand-font">
+                Classroom management<br />
+                techniques for new tutors
+              </h6>
+            </div>
             <div class="stori-five">
               <img class="stori-img" src="assets/story-5.png" alt="" /><span
                 class="stori-date raleway-font"
@@ -176,6 +198,42 @@
         <button class="view-btn quicksand-font">View All</button>
       </section>
     </main>
-    <footer></footer>
+
+    <!-- footer section  -->
+
+    <footer class="footer quicksand-font">
+      <div class="content-container display-flex">
+        <div>
+          <div class="logo display-flex">
+            <img src="assets/Group 1.png" alt="" />
+            <h1>
+              Kids<br />
+              Education
+            </h1>
+          </div>
+          <p>
+            Education is the foundation of a child's growth and development.<br />
+            It equips young minds with the knowledge, skills,<br />
+            and values necessary to navigate the world and achieve their
+            potential.<br />
+            For children, education begins at an early age,
+          </p>
+        </div>
+        <div class="footer-menu">
+          <h5>About School</h5>
+          <li>Home</li>
+          <li>About</li>
+          <li>Facilities</li>
+          <li>Admission</li>
+        </div>
+        <div>
+          <h5>Keep In Touch</h5>
+          <img src="assets/fb.png" alt="" />
+          <img src="assets/dribble.png" alt="" />
+          <img src="assets/twitter.png" alt="" />
+          <img src="assets/google+.png" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
