added marquee and footer responsive

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <button class="btn-one">Contact</button>
         </div>
       </nav>
+      <marquee class="marq quicksand-font" behavior="" direction=""
+        >Admissions are now open.</marquee
+      >
       <!-- banner section -->
       <banner class="banner display-flex">
         <div class="banner-content quicksand-font">
@@ -80,7 +83,9 @@
               dis parturient montes, nascetur ridiculus<br />
               mu sdis parturient
             </p>
-            <button class="card-btn-one quicksand-font">Read More</button>
+            <button class="card-btn-one quicksand-font">
+              <a class="ankor-1" href="">Read More</a>
+            </button>
           </div>
           <div class="card-two">
             <img src="assets/elementary.png" alt="" />
@@ -90,7 +95,9 @@
               dis parturient montes, nascetur ridiculus<br />
               mu sdis parturient
             </p>
-            <button class="card-btn-two quicksand-font">Read More</button>
+            <button class="card-btn-two quicksand-font">
+              <a class="ankor-2" href="">Read More</a>
+            </button>
           </div>
           <div class="card-three">
             <img src="assets/middle.png" alt="" />
@@ -100,7 +107,9 @@
               dis parturient montes, nascetur ridiculus<br />
               mu sdis parturient
             </p>
-            <button class="card-btn-three quicksand-font">Read More</button>
+            <button class="card-btn-three quicksand-font">
+              <a class="ankor-3" href="">Read More</a>
+            </button>
           </div>
         </div>
         <button class="left-slide">
@@ -221,14 +230,14 @@
         </div>
         <div class="footer-menu">
           <h5>About School</h5>
-          <li>Home</li>
-          <li>About</li>
-          <li>Facilities</li>
-          <li>Admission</li>
+          <li><a class="footer-link" href="">Home</a></li>
+          <li><a class="footer-link" href="">About</a></li>
+          <li><a class="footer-link" href="">Facilities</a></li>
+          <li><a class="footer-link" href="">Admission</a></li>
         </div>
         <div>
-          <h5>Keep In Touch</h5>
-          <img src="assets/fb.png" alt="" />
+          <h5 class="touch">Keep In Touch</h5>
+          <img class="social" src="assets/fb.png" alt="" />
           <img src="assets/dribble.png" alt="" />
           <img src="assets/twitter.png" alt="" />
           <img src="assets/google+.png" alt="" />
