--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Shool</title>
+    <title>School</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link
+      rel="shortcut icon"
+      href="assets/school-buildin.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
