--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             age <span class="vision">towards vision</span>
           </h1>
           <p class="banner-descript">
-            With the courage, Confidence, Creativity and Compassion to make<br />
+            With the courage, Confidence, Creativity and Compassion to make
             their Unique Contribution in a Diverse and Dynamic World.
           </p>
           <button class="enroll-btn quicksand-font">Enroll Now</button>
@@ -84,9 +84,8 @@
             <img src="assets/kinder.png" alt="" />
             <h3 class="card-title quicksand-font">Kinder (3-6) Years</h3>
             <p class="card-descript raleway-font">
-              Cum sociis natoque penatibus et magnis<br />
-              dis parturient montes, nascetur ridiculus<br />
-              mu sdis parturient
+              Cum sociis natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mu sdis parturient
             </p>
             <button class="card-btn-one quicksand-font">
               <a class="ankor-1" href="">Read More</a>
@@ -96,9 +95,8 @@
             <img src="assets/elementary.png" alt="" />
             <h3 class="card-title quicksand-font">Elementary School</h3>
             <p class="card-descript raleway-font">
-              Cum sociis natoque penatibus et magnis<br />
-              dis parturient montes, nascetur ridiculus<br />
-              mu sdis parturient
+              Cum sociis natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mu sdis parturient
             </p>
             <button class="card-btn-two quicksand-font">
               <a class="ankor-2" href="">Read More</a>
@@ -108,9 +106,8 @@
             <img src="assets/middle.png" alt="" />
             <h3 class="card-title quicksand-font">Middle (10-16) Years</h3>
             <p class="card-descript raleway-font">
-              Cum sociis natoque penatibus et magnis<br />
-              dis parturient montes, nascetur ridiculus<br />
-              mu sdis parturient
+              Cum sociis natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mu sdis parturient
             </p>
             <button class="card-btn-three quicksand-font">
               <a class="ankor-3" href="">Read More</a>
@@ -138,8 +135,8 @@
             </h2>
 
             <p class="stori-descript raleway-font">
-              Beautiful branding for changes by Never Now in Australia.<br />
-              changes is a platform for open discussion in an inclusive and<br />
+              Beautiful branding for changes by Never Now in Australia. changes
+              is a platform for open discussion in an inclusive and
               collaborative environment, providing the...
             </p>
           </div>
@@ -225,12 +222,11 @@
               Education
             </h1>
           </div>
-          <p>
-            Education is the foundation of a child's growth and development.<br />
-            It equips young minds with the knowledge, skills,<br />
-            and values necessary to navigate the world and achieve their
-            potential.<br />
-            For children, education begins at an early age,
+          <p class="footer-para">
+            Education is the foundation of a child's growth and development. It
+            equips young minds with the knowledge, skills, and values necessary
+            to navigate the world and achieve their potential. For children,
+            education begins at an early age,
           </p>
         </div>
         <div class="footer-menu">
