--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
             </h1>
           </div>
           <p class="footer-para">
-            Education is the foundation of a child's growth and development. It
-            equips young minds with the knowledge, skills, and values necessary
-            to navigate the world and achieve their potential. For children,
-            education begins at an early age,
+            Education is the foundation of a child's growth and development.<br />
+            It equips young minds with the knowledge, skills, and values<br />
+            necessary to navigate the world and achieve their potential.<br />
+            For children, education begins at an early age,
           </p>
         </div>
         <div class="footer-menu">
